kubernetes/elastic-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`elasticsearch.poc.test`)
      services:
        - name: elasticsearch-es-http
          port: 9200
          scheme: https
          serversTransport: eck-https
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kibana.poc.test`)
      services:
        - name: es-kb-quickstart-eck-kibana-kb-http
          port: 5601
          scheme: https
          serversTransport: eck-https
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-server
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fleet.poc.test`)
      services:
        - name: fleet-server-agent-http
          port: 8220
          scheme: https
          serversTransport: eck-https
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apm-server
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`apm.poc.test`)
      services:
        - name: apm-server-apm-http
          port: 8200
          scheme: https
          serversTransport: eck-https
  tls: {}
